# trace

./: .env.example  .gitignore  PITCH.md  PROMPTS.md  compose.yaml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  seed.py  statemachine.py
backend/app/routers/: admin.py  auth.py  batches.py  capture.py  contracts.py  offers.py  payouts.py  pickups.py  telegram.py
backend/app/services/: __init__.py  aggregation.py  grading.py  handoff.py  justify.py  messaging.py  ports.py  routing.py  scheduler.py
backend/tests/: conftest.py  test_admin_router.py  test_aggregation.py  test_auth.py  test_cascade_integration.py  test_contracts_router.py  test_grading.py  test_handoff.py  test_justify.py  test_models.py  test_read_endpoints.py  test_routers.py  test_routing.py  test_seed.py  test_statemachine.py
backend/tests/fixtures/: README.md
docs/superpowers/specs/: 2026-07-11-trace-implementation-design.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  opengraph-image.alt.txt  page.tsx
frontend/app/composter/: page.tsx
frontend/app/premium-buyer/: page.tsx
frontend/app/secondary-buyer/: page.tsx
messager/telegram_bot/: .env  Dockerfile  bot.py
