[project]
name = "trace-backend"
version = "0.1.0"
description = "TRACE core backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "psycopg[binary]",
    "pydantic-settings",
    "bcrypt",
    "itsdangerous",
    "httpx",
    "pillow",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
